Reverting fix for (WMS-14327) horizontal scroll is observed in security dialog with chips as this is causing issue in liveform.

--- a/src/main/webapp/styles/less/wm-widgets.less
+++ b/src/main/webapp/styles/less/wm-widgets.less
@@ -1083,10 +1083,6 @@ html, body {
           height: 28px;
           padding: 4px 12px 8px;
         }
-        &.app-search {
-          width: auto;
-          min-width: 10em;
-        }
       }
     }
     &.chip-placeholder {
